--- a/demo5.html
+++ b/demo5.html
@@ -15,6 +15,10 @@ var person = {
 };
 
 // add document code here
+delete person.age;
+document.getElementById("demo").innerHTML = 
+person.firstname + " is " + person.age + " years old.";
+
 
 
 
